--- a/package.json
+++ b/package.json
@@ -1,41 +1,3 @@
-{
-  "name": "@inb/oeb-classification-table",
-  "version": "1.3.4",
-  "description": "Repository that contains the table used in OpenEBench for the classification of benchmarking results",
-  "main": "build/build.js",
-  "scripts": {
-    "build": "npm ci",
-    "prod": "webpack-cli -p;",
-    "dev": "webpack-cli -d -w;",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Javier Garrayo <javier.garrayo@bsc.es>, Vicky Sundesha <vicky.sundesha@bsc.es>, Dominik Brüchner <dominik.bruchner@bsc.es>, José Mª Fernández <jose.m.fernandez@bsc.es>",
-  "license": "ISC",
-  "devDependencies": {
-    "apollo-fetch": "^0.7.0",
-    "css-loader": "^1.0.1",
-    "jquery": "^3.4.1",
-    "jquery-ui": "^1.13.2",
-    "style-loader": "^0.21.0",
-    "terser-webpack-plugin": "^4.2.3",
-    "url-join": "^4.0.0",
-    "url-loader": "^4.1.1",
-    "webpack": "^4.32.2",
-    "webpack-cli": "^3.3.2"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/inab/bench_event_table.git"
-  },
-  "keywords": [
-    "visualization",
-    "classification",
-    "table",
-    "benchmarking",
-    "openEBench"
-  ],
-  "bugs": {
-    "url": "https://github.com/inab/bench_event_table/issues"
-  },
-  "homepage": "https://github.com/inab/bench_event_table#readme"
-}
+version https://git-lfs.github.com/spec/v1
+oid sha256:8dc10428cd1de5bef72881b8a0a304da3acbccba3431e77f33504116bc73cf52
+size 1269
